# kavach

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build_err.txt  build_errors.json  build_errors.txt  build_errors_short.txt  build_output.txt  error_log.txt  info  rust_errors.txt  tauri.conf.json
src-tauri/src/: clipboard.rs  ebpf_mon.rs  honeypot.rs  lib.rs  main.rs  siem.rs
src/components/: ActionLog.tsx  AgentScopeViewer.tsx  BlastRadiusModal.tsx  CommLink.tsx  Dashboard.tsx  Header.tsx  TacticalConsole.tsx  TrustScopes.tsx
