[package]
name = "kavach-app"
version = "1.0.0"
description = "A Tauri App"
authors = ["Akshay Sharma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kavach_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
sysinfo = "0.33"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
fs_extra = "1.3.0"
regex = "1"
# v1.1 Features
aya = { version = "0.13", features = ["async_tokio"], optional = true }
arboard = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

